# ESCAPER

./: .gitignore  A Multi-Agent Escape-Room Platform for Studying Reputation + Gossip and Adversarial Robustness in LLM Teams.txt  CHANGELOG.md  DEVELOPMENT.md  INSTALL.md  LICENSE  OBSERVABILITY.md  PROJECT_SUMMARY.md  Project Experiment Idea Initial Proposal.txt  QUICKSTART.md  RATE_LIMIT_HANDLING.md  README.md  START_HERE.md  STRUCTURE.md  USAGE_EXAMPLES.md  demo_verbose.sh  env.example  pyproject.toml  requirements.txt  test_installation.py
escaper/: __init__.py
escaper/cli/: __init__.py  run_experiment.py
escaper/config/personas/: default_personas.json
escaper/config/rooms/: room_difficult_1.json  room_difficult_2.json  room_simple_1.json  room_two_stage_1.json
escaper/core/: __init__.py  agents.py  metrics.py  room.py  runner.py  state.py  tools.py
escaper/logging/: __init__.py  logger.py  serializers.py
escaper/prompts/: agent_prompt.jinja  system_coop.txt  system_malicious.txt  system_malicious_always_wrong.txt
experiment-logs/: experiment_config_20251212_130738.txt  metrics_summary_20251212_130738.json  terminal_output_20251212_130738.txt  terminal_output_20251212_131628.txt
